# nanook

./: .flake8  .gitignore  README.md  pyproject.toml
nanook/: __init__.py  __main__.py  controller.py  nktrl_st_file.py  scene.py  sniffer.py
nanook/midi/: constants.py  device.py  utils.py
nanook/scripts/: cli.py
