[tool.poetry]
name = "nanook"
version = "0.1.0"
description = "CLI tool for interacting with the KORG nanoKONTROL Studio MIDI controller."
authors = ["Miklos Aubert <miklos.aubert@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.2.9"
click = "^7.1.2"
uvloop = "^0.15.2"
aioconsole = "^0.3.1"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
