[tool.poetry]
name = "nanook"
version = "0.1.1"
description = "Command line tool for managing scenes on the KORG nanoKONTROL Studio MIDI controller."
authors = ["Miklos Aubert <miklos.aubert@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/miklosaubert/nanook"
homepage = "https://github.com/miklosaubert/nanook"
keywords = ["MIDI", "controller", "CLI", "manager"]
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.2.9"
click = "^7.1.2"
uvloop = "^0.15.2"
aioconsole = "^0.3.1"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
flake8 = "^3.9.1"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nanook = "nanook.scripts.cli:main"
